# ai-vms

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  INITIAL_DEVELOPMENT_PROMPT.md  MIGRATION_TO_TARGET.md  PROGRESS.md
backend/: alembic.ini  main.py  pyproject.toml  requirements-ai.txt  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py  1767777b6064_change_identity_type_employee_visitor_.py  88dd8b98d05b_add_recognition_logs_table.py  9f1a2b3c4d5e_add_face_clusters_and_log_embedding.py  a1b2c3d4e5f6_add_position_to_identities.py  a2b3c4d5e6f7_camera_fk_on_delete_set_null.py  b3c4d5e6f7a8_face_clusters_camera_fk_set_null.py  c4d5e6f7a8b9_recognition_logs_camera_id_nullable.py  cc9d217e637c_merge_settings_and_position_branches.py  cfc80f71c49f_add_enable_face_recognition_to_alert_.py  d1e2f3a4b5c6_add_system_settings_table.py  e2f3a4b5c6d7_encrypt_camera_rtsp_credentials.py  f1a2b3c4d5e6_add_camera_id_to_alert_rules.py
backend/app/infrastructure/: errors.py  logging_config.py
backend/app/infrastructure/ai/: frame_capture.py  insightface_service.py  yolo_service.py
backend/app/infrastructure/config/: settings.py
backend/app/infrastructure/crypto/: encryption.py
backend/app/infrastructure/database/: orm_models.py  session.py
backend/app/infrastructure/event_bus/: mqtt_client.py  notification_dispatcher.py  redis_event_bus.py  ws_manager.py
backend/app/infrastructure/go2rtc/: go2rtc_client.py
backend/app/infrastructure/langgraph/: runner.py  (+2 more)
backend/scripts/: entrypoint.sh  seed_admin.py
(+237 files in other folders)
