[project]
name = "ai-vms"
version = "0.1.0"
description = "AI Multi-Agent 기반 영상 관리/관제 시스템"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    "aiomqtt>=2.3.0",
    "qdrant-client>=1.12.0",
]

[project.optional-dependencies]
ai = [
    "insightface>=0.7.3",
    "onnxruntime-gpu>=1.19.0",
    "ultralytics>=8.3.0",
    "mediapipe>=0.10.0",
    "opencv-python-headless>=4.10.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "anyio[trio]>=4.0.0",
    "ruff>=0.8.0",
    "email-validator>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
